--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -483,7 +483,7 @@ nav[role="main_menu"] header:after {
     left: 50%;
     margin-left: -35px;
 }
-#about, #talks, #subject, #sponsor, #submission {
+#about, #talks, #subject, #sponsor, #submission, #location {
     font-size: 24px;
     font-size: 1.5rem;
     line-height: 1.5em;
@@ -629,7 +629,8 @@ nav[role="main_menu"] header:after {
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
-    border-radius: 50%}
+    border-radius: 50%
+}
 #team a, #committee a {
     color: #f16a23;
 }
