新增 VENUE 中各個景點介紹與照片，加入政大介紹與政大獸連結。修改地圖的寬度不要全版型。

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -593,6 +593,14 @@ nav[role="main_menu"] header:after {
     }
 }
 
+#location img.smallshow{
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%
+}
+
 #team h3, #committee h3 {
     font-size: 24px;
     font-size: 2rem;
@@ -629,9 +637,9 @@ nav[role="main_menu"] header:after {
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
-    border-radius: 50%
+    border-radius: 50%;
 }
-#team a, #committee a {
+#team a, #committee a, #location a {
     color: #f16a23;
 }
 #team .avatar {
